--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,12 +3,9 @@ project(sgb)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(sgb
+add_executable(sgb  main.c
+        cadastro.c
+        busca.c
+        listagem.c
 
-    main.c
-        Listagem_Livros.c
-        Listagem_Livros.c
-        Busca_livro.c
-        Estrutura_Livro.c
-        Cadastro_Livros.c
 )
